# Eva_drive

./: .gitignore  urdf.txt
drive_eva/: jet_teensy_ethernet_tcp.py  jetson_joy_converter.py
eva_ws/: frames_2026-02-24_00.08.52.gv  map_1771723477.pgm  map_1771723477.yaml  my_map_eva.pgm  my_map_eva.yaml
eva_ws/src/eva_new/: CMakeLists.txt  package.xml
eva_ws/src/eva_new/config/: cartographer.lua  eva_nav2_default.rviz  eva_new_config.rviz  gazebo_bridge.yaml  joint_names_EVAFinal.SLDASM.yaml  nav2_params.yaml  nav2_params_holonomic.yaml
eva_ws/src/eva_new/launch/: eva_control.launch.py  eva_nav.launch.py  nav_eva_cartographer.launch.py  view_robot_control.launch.py  view_robot_gz.launch.py  view_robot_rivz.launch.py
eva_ws/src/eva_new/maps/: eva_map.pgm  eva_map.yaml  map_eva.pgm  map_eva.yaml  map_eva_1.pgm
eva_ws/src/eva_new/meshes/: Back_Left_Wheel_Link.STL  Back_Left_Wheel_Roller1.STL  Back_Left_Wheel_Roller10.STL  Back_Left_Wheel_Roller11.STL  Back_Left_Wheel_Roller12.STL  Back_Left_Wheel_Roller13.STL  Back_Left_Wheel_Roller14.STL  Back_Left_Wheel_Roller15.STL  Back_Left_Wheel_Roller16.STL  Back_Left_Wheel_Roller17.STL  Back_Left_Wheel_Roller18.STL  Back_Left_Wheel_Roller19.STL  Back_Left_Wheel_Roller2.STL  Back_Left_Wheel_Roller20.STL  Back_Left_Wheel_Roller21.STL  Back_Left_Wheel_Roller22.STL  Back_Left_Wheel_Roller3.STL  Back_Left_Wheel_Roller4.STL  Back_Left_Wheel_Roller5.STL  Back_Left_Wheel_Roller6.STL  Back_Left_Wheel_Roller7.STL  Back_Left_Wheel_Roller8.STL  Back_Left_Wheel_Roller9.STL  Back_Right_Wheel_Link.STL  Back_Right_Wheel_Roller1.STL  Back_Right_Wheel_Roller10.STL  Back_Right_Wheel_Roller11.STL  Back_Right_Wheel_Roller12.STL  Back_Right_Wheel_Roller13.STL  Back_Right_Wheel_Roller14.STL  Back_Right_Wheel_Roller15.STL  Back_Right_Wheel_Roller16.STL  Back_Right_Wheel_Roller17.STL  Back_Right_Wheel_Roller18.STL  Back_Right_Wheel_Roller19.STL  Back_Right_Wheel_Roller2.STL  Back_Right_Wheel_Roller20.STL  Back_Right_Wheel_Roller21.STL  Back_Right_Wheel_Roller22.STL  Back_Right_Wheel_Roller3.STL  (+65 more)
eva_ws/src/eva_new/scripts/: api_nav2_goal.py  cmd_vel_nav_2_teensy_drive.py  fake_odom.py  nav2_goal_client.py  nav2_to_teensy_converter.py  nav_data_listener.py
eva_ws/src/eva_new/urdf/: EVAFinal.SLDASM.urdf  backup_EVAFinal.SLDASM.urdf  corrected_backup_EVAFinal.SLDASM.urdf
eva_ws/src/robocon_world/: CMakeLists.txt  package.xml
eva_ws/src/robocon_world/models/robocon_arena/: model.config
eva_ws/src/robocon_world/models/robocon_arena/meshes/: Arena2.stl  arena.STL  arenablend.stl
eva_ws/src/robocon_world/worlds/: arena.world  test_arena.world
web/: flask_web_server.py  req.txt
web/templates/: index.html
web/templates/static/: script.js  style.css
